--- a/DynamicConsume.csproj
+++ b/DynamicConsume.csproj
@@ -6,16 +6,36 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<PropertyGroup>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>Yahya Yagmur</Authors>
 		<Company>Yahya Yagmur</Company>
 		<PackageId>DynamicConsume</PackageId>
-		<Description>Description</Description>
+		<Description>Dynamic Api Consume by Yahya Yagmur</Description>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Copyright>Copyright 2024</Copyright>
+		<PackageIcon>Graphicloads-100-Flat-2-File-folder.256.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/Yahyaygmr/DynamicConsumeNuget</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>api consume</PackageTags>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Include="C:\Users\YAHYA\Desktop\Graphicloads-100-Flat-2-File-folder.256.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
