committed new version 2.0.1

--- a/DynamicConsume.csproj
+++ b/DynamicConsume.csproj
@@ -6,12 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<PropertyGroup>
-		<Version>1.0.1</Version>
+		<Version>2.0.1</Version>
 		<Authors>Yahya Yagmur</Authors>
 		<Company>Yahya Yagmur</Company>
 		<PackageId>DynamicConsume</PackageId>
 		<Description>Dynamic Api Consume by Yahya Yagmur</Description>
-		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Copyright>Copyright 2024</Copyright>
 		<PackageIcon>Graphicloads-100-Flat-2-File-folder.256.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
@@ -19,12 +19,6 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>api consume</PackageTags>
 	</PropertyGroup>
-	<ItemGroup>
-	  <None Include="C:\Users\YAHYA\Desktop\Graphicloads-100-Flat-2-File-folder.256.png">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
-	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
@@ -32,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Graphicloads-100-Flat-2-File-folder.256.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
